Create endpoint to get post by id