@@ -2,16 +2,16 @@ package com.tutran.springblog.service.impl;
 
 import com.tutran.springblog.entity.Post;
 import com.tutran.springblog.mapper.PostMapper;
-import com.tutran.springblog.payload.PostCreateRequest;
-import com.tutran.springblog.payload.PostResponseDto;
+import com.tutran.springblog.payload.post.PostCreateRequest;
+import com.tutran.springblog.payload.post.PostResponseDto;
 import com.tutran.springblog.repository.PostRepository;
 import com.tutran.springblog.service.PostService;
+import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -38,6 +38,14 @@ public class PostServiceImpl implements PostService {
     @Override
     public List<PostResponseDto> getAllPosts() {
         List<Post> posts = postRepository.findAll();
-        return posts.stream().map(postMapper::postToPostResponseDto).collect(Collectors.toList());
+        return posts.stream().map(postMapper::postToPostResponseDto).toList();
+    }
+
+    @Override
+    public PostResponseDto getPostById(long id) {
+        Post post = postRepository.findById(id).orElseThrow(
+                () -> new EntityNotFoundException("Could not find post with id: " + id)
+        );
+        return postMapper.postToPostResponseDto(post);
     }
 }
